5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1635_2711.log
== SUBMITION (2019-04-15 11:32:10) 
-- CODE:
valor = float(input("valor: "))
ru = float(input("ru: "))
tickets = int(input("ticket: ")
passes = float(input("passes:"))
valor dos passes = int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
					 

-- EXECUTION TIME:
0.177335
-- ERROR:
  File "/home/codebench/codes/1635/2711/main.py", line 4
    passes = float(input())
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:32:17) 
-- CODE:
valor = float(input("valor: "))
ru = float(input("ru: "))
tickets = int(input("ticket: ")
passes = float(input("passes:"))
valor dos passes = int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 4
    passes = float(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:32:16) 
-- CODE:
valor = float(input("valor: "))
ru = float(input("ru: "))
tickets = int(input("ticket: ")
passes = float(input("passes:"))
valor dos passes = int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 4
    passes = float(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:32:27) 
-- CODE:
valor = float(input("valor: "))
ru = float(input("ru: "))
tickets = int(input("ticket: ")
passes = float(input("passes: "))
valor dos passes = int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 4
    passes = float(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:32:52) 
-- CODE:
valor = float(input("valor: "))
ru = float(input("ru: "))
tickets = int(input("ticket: ")
passes = input("passes: "))
valor dos passes = int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 4
    passes = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:33:03) 
-- CODE:
valor = float(input("valor: "))
ru = float(input("ru: "))
tickets = int(input("ticket: ")
passes = float(input("passes: "))
valor dos passes = int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 4
    passes = float(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:34:01) 
-- CODE:
valor = float(input("valor: "))
ru = float(input("ru: "))
tickets = int(input("ticket: "))
passes = float(input("passes: "))
valor dos passes = int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 5
    valor dos passes = int(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:34:35) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=int(input("ticket: "))
passes=float(input("passes: "))
valor dos passes=int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 5
    valor dos passes=int(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:34:48) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=int(input("ticket: "))
passes=float(input("passes: "))
valordospasses=int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 6
    a = float(ru*tickets+passes*valor dos passes)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:34:55) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=int(input("ticket: "))
passes=float(input("passes: "))
valordospasses=int(input("valor dos passes"))
a = float(ru*tickets+passes*valor dos passes)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
File "XXXX", line 6
    a = float(ru*tickets+passes*valor dos passes)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:35:17) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=int(input("ticket: "))
passes=float(input("passes: "))
valordospasses=int(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tickets=int(input())
ValueError: invalid literal for int() with base 10: '1.20'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:36:04) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=int(input("ticket: "))
passes=float(input("passes: "))
valordospasses=int(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tickets=int(input())
ValueError: invalid literal for int() with base 10: '1.20'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:36:12) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=int(input("ticket: "))
passes=float(input("passes: "))
valordospasses=int(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tickets=int(input())
ValueError: invalid literal for int() with base 10: '1.20'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:36:44) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=int(input("tickets: "))
passes=float(input("passes: "))
valordospasses=int(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tickets=int(input())
ValueError: invalid literal for int() with base 10: '1.20'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:37:07) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=int(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valordospasses=int(input())
ValueError: invalid literal for int() with base 10: '1.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:37:41) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=float(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if valor>=a:
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = SUFICIENTE
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:38:15) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=float(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if (valor>=a):
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = SUFICIENTE
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:38:27) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=float(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if (valor>=a):
	mensagem = SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = SUFICIENTE
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:38:52) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=float(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if (valor>=a):
	mensagem=SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem=SUFICIENTE
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:39:47) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=float(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if (valor>=a):
	mensagem=SUFICIENTE
	print(mensagem)
				  
else:
	mensagem = INSUFICIENTE
	print(mensagem)
					 

-- EXECUTION TIME:
0.133376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2711/main.py", line 9, in <module>
    mensagem=SUFICIENTE
NameError: name 'SUFICIENTE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:40:21) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=float(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if (valor>=a):
	mensagem = "SUFICIENTE"
	print(mensagem)
				  
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
					 

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:40:23) 
-- CODE:
valor=float(input("valor: "))
ru=float(input("ru: "))
tickets=float(input("tickets: "))
passes=float(input("passes: "))
valordospasses=float(input("valor dos passes"))
a = float(ru*tickets+passes*valordospasses)
					 
if (valor>=a):
	mensagem = "SUFICIENTE"
	print(mensagem)
				  
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
					 

-- EXECUTION TIME:
0.214851
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
